// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToAvro complex schema #2 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "athlete",
      "type": "string",
    },
    Object {
      "name": "clearance",
      "type": "boolean",
    },
    Object {
      "name": "comingSoonSignup",
      "type": "float",
    },
    Object {
      "name": "customizable",
      "type": "boolean",
    },
    Object {
      "name": "age",
      "type": "string",
    },
    Object {
      "name": "brand",
      "type": "string",
    },
    Object {
      "name": "campaign",
      "type": "string",
    },
    Object {
      "name": "color",
      "type": "string",
    },
    Object {
      "name": "defaultColor",
      "type": "string",
    },
    Object {
      "name": "gender",
      "type": "string",
    },
    Object {
      "name": "genderSub",
      "type": "string",
    },
    Object {
      "name": "hastag",
      "type": "string",
    },
    Object {
      "name": "maxQuantity",
      "type": "string",
    },
    Object {
      "name": "productDivision",
      "type": "string",
    },
    Object {
      "name": "productLine",
      "type": "string",
    },
    Object {
      "name": "productType",
      "type": "string",
    },
    Object {
      "name": "price",
      "type": Object {
        "doc": "Price model description",
        "fields": Array [
          Object {
            "name": "standardPrice",
            "type": "float",
          },
          Object {
            "name": "standardPriceWithoutVAT",
            "type": "float",
          },
          Object {
            "name": "currentPrice",
            "type": "float",
          },
          Object {
            "name": "salesPrice",
            "type": "float",
          },
        ],
        "name": "SupermodelIoAdidasProductEcomPrice",
        "type": "record",
      },
    },
    Object {
      "name": "sport",
      "type": "string",
    },
    Object {
      "name": "fitbarPosition",
      "type": "string",
    },
    Object {
      "name": "care",
      "type": Object {
        "doc": "Care model description",
        "fields": Array [
          Object {
            "name": "bleachingInstruction",
            "type": "string",
          },
          Object {
            "name": "ironInstruction",
            "type": "string",
          },
          Object {
            "name": "dryCleanInstruction",
            "type": "string",
          },
          Object {
            "name": "dryInstruction",
            "type": "string",
          },
          Object {
            "name": "extraCareInstruction",
            "type": "string",
          },
        ],
        "name": "SupermodelIoAdidasProductEcomCare",
        "type": "record",
      },
    },
    Object {
      "doc": "ISO 8601 Date",
      "name": "onlineFrom",
      "type": "string",
    },
    Object {
      "doc": "ISO 8601 Date",
      "name": "onlineTo",
      "type": "string",
    },
    Object {
      "doc": "ISO 8601 Date",
      "name": "previewTo",
      "type": "string",
    },
    Object {
      "name": "pdp",
      "type": Object {
        "doc": "PDP model description",
        "fields": Array [
          Object {
            "name": "callout",
            "type": "string",
          },
          Object {
            "name": "content",
            "type": "string",
          },
          Object {
            "name": "model",
            "type": "string",
          },
        ],
        "name": "SupermodelIoAdidasProductEcom",
        "type": "record",
      },
    },
    Object {
      "name": "flashProduct",
      "type": "boolean",
    },
    Object {
      "name": "hypeProduct",
      "type": "boolean",
    },
    Object {
      "name": "personalizable",
      "type": "boolean",
    },
    Object {
      "name": "preorder",
      "type": "boolean",
    },
    Object {
      "name": "soldout",
      "type": "boolean",
    },
    Object {
      "name": "productFamily",
      "type": "string",
    },
    Object {
      "name": "productFilter",
      "type": "string",
    },
    Object {
      "name": "prodcutLine",
      "type": "string",
    },
    Object {
      "name": "sizeChart",
      "type": "string",
    },
    Object {
      "name": "teams",
      "type": "string",
    },
    Object {
      "doc": "The 'Template' is used to identify if the inline or miadidas PDP template should be applied in the ecommerce frontend.",
      "name": "template",
      "type": "string",
    },
    Object {
      "name": "articleNumber",
      "type": "string",
    },
    Object {
      "name": "modelNumber",
      "type": "string",
    },
    Object {
      "name": "articleDescription",
      "type": "string",
    },
    Object {
      "name": "name",
      "type": "string",
    },
    Object {
      "name": "badge",
      "type": Object {
        "fields": Array [
          Object {
            "name": "style",
            "type": Object {
              "name": undefined,
              "symbols": Array [
                "new",
                "preview",
                "preorder",
                "sales",
                "customizable",
                "soldout",
              ],
              "type": "enum",
            },
          },
          Object {
            "name": "description",
            "type": "string",
          },
        ],
        "name": "SupermodelIoAdidasProductEcomBadge",
        "type": "record",
      },
    },
    Object {
      "name": "assets",
      "type": Object {
        "items": Object {
          "doc": "Digital Asset",
          "fields": Array [
            Object {
              "name": "assetType",
              "type": Object {
                "name": undefined,
                "symbols": Array [
                  "image",
                  "video",
                  "other",
                ],
                "type": "enum",
              },
            },
            Object {
              "name": "viewGroup",
              "type": "string",
            },
            Object {
              "name": "view",
              "type": "string",
            },
            Object {
              "name": "assetCategory",
              "type": "string",
            },
            Object {
              "name": "usageTerms",
              "type": Object {
                "items": "string",
                "type": "array",
              },
            },
            Object {
              "name": "assetHref",
              "type": "string",
            },
            Object {
              "name": "image",
              "type": Object {
                "fields": Array [
                  Object {
                    "name": "style",
                    "type": "string",
                  },
                  Object {
                    "name": "width",
                    "type": "int",
                  },
                  Object {
                    "name": "height",
                    "type": "int",
                  },
                  Object {
                    "name": "bgColor",
                    "type": "string",
                  },
                  Object {
                    "name": "representation",
                    "type": "string",
                  },
                ],
                "name": undefined,
                "type": "record",
              },
            },
            Object {
              "name": "video",
              "type": Object {
                "fields": Array [
                  Object {
                    "name": "fileSize",
                    "type": "int",
                  },
                ],
                "name": undefined,
                "type": "record",
              },
            },
            Object {
              "name": "model",
              "type": Object {
                "fields": Array [
                  Object {
                    "name": "waist",
                    "type": "string",
                  },
                  Object {
                    "name": "chest",
                    "type": "string",
                  },
                  Object {
                    "name": "height",
                    "type": "string",
                  },
                  Object {
                    "name": "productSize",
                    "type": "string",
                  },
                ],
                "name": undefined,
                "type": "record",
              },
            },
          ],
          "name": "SupermodelIoAdidasProductAsset",
          "type": "record",
        },
        "type": "array",
      },
    },
    Object {
      "name": "colorVariants",
      "type": Object {
        "items": "SupermodelIoAdidasProductEcomArticle",
        "type": "array",
      },
    },
    Object {
      "name": "miadidas",
      "type": Object {
        "items": "SupermodelIoAdidasProductEcomArticle",
        "type": "array",
      },
    },
    Object {
      "name": "completeLook",
      "type": Object {
        "items": "SupermodelIoAdidasProductEcomArticle",
        "type": "array",
      },
    },
  ],
  "name": "SupermodelIoAdidasProductEcomArticle",
  "namespace": "io.supermodel.adidas.product.ecom",
  "type": "record",
}
`;

exports[`convertToAvro converts enum 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "volume",
      "type": "float",
    },
    Object {
      "name": "power",
      "type": "int",
    },
    Object {
      "name": "fuel",
      "type": Object {
        "name": undefined,
        "symbols": Array [
          "gasoline",
          "diesel",
          "lpg",
          "cng",
        ],
        "type": "enum",
      },
    },
  ],
  "name": "SupermodelIoFactoryPartsEngine",
  "namespace": "io.supermodel.factory.parts",
  "type": "record",
}
`;

exports[`convertToAvro converts inline object in property 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
        ],
        "name": "Engine",
        "type": "record",
      },
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro converts oneOf into union 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "engine",
      "type": Array [
        Object {
          "fields": Array [
            Object {
              "name": "volume",
              "type": "float",
            },
            Object {
              "name": "power",
              "type": "int",
            },
          ],
          "name": "SupermodelIoFactoryPartsEngine",
          "type": "record",
        },
        Object {
          "fields": Array [
            Object {
              "name": "gears",
              "type": "float",
            },
          ],
          "name": "SupermodelIoFactoryPartsTransmission",
          "type": "record",
        },
      ],
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro converts required property 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by #/ 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
        ],
        "name": "SupermodelIoFactoryPartsEngine",
        "type": "record",
      },
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by id 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
        ],
        "name": "SupermodelIoFactoryPartsEngine",
        "type": "record",
      },
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by relative path 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
        ],
        "name": "SupermodelIoFactoryPartsEngine",
        "type": "record",
      },
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs works with nested ref objects 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "manufacturer",
      "type": Object {
        "fields": Array [
          Object {
            "name": "name",
            "type": "string",
          },
        ],
        "name": "SupermodelIoFactoryManufacturer",
        "type": "record",
      },
    },
    Object {
      "name": "type",
      "type": "string",
    },
    Object {
      "name": "weight",
      "type": "int",
    },
    Object {
      "name": "length",
      "type": "float",
    },
    Object {
      "name": "available",
      "type": "boolean",
    },
    Object {
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "name": "volume",
            "type": "float",
          },
          Object {
            "name": "power",
            "type": "int",
          },
          Object {
            "name": "manufacturer",
            "type": "SupermodelIoFactoryManufacturer",
          },
        ],
        "name": "SupermodelIoFactoryPartsEngine",
        "type": "record",
      },
    },
  ],
  "name": "SupermodelIoFactoryCar",
  "namespace": "io.supermodel.factory",
  "type": "record",
}
`;

exports[`convertToAvro simple type 1`] = `
Object {
  "doc": "Order model description",
  "fields": Array [
    Object {
      "name": "timestamp",
      "type": "string",
    },
  ],
  "name": "SupermodelIoDavidOrder",
  "namespace": "io.supermodel.david",
  "type": "record",
}
`;
